TinyPedal (WIP)
-----------------------------
* Relative Widget
    - Implemented new lazy GUI update method that reduces Relative Widget CPU usage by 80% more.

* Sectors Widget
    - Now freezes and shows current lap fastest speed (thanks to Piervit's suggestion),
      and auto resets when a new lap begins.
    - Now validates session fastest speed at beginning of a new lap,
      and auto restores valid session fastest speed for fastest speed found from invalid lap.
    - Speed value now shows an additional decimal place for more accurate reading.

* Core
    - Fixed alpha opacity issue under linux (by Bernat).

TinyPedal 1.10.2 (2023-01-29)
-----------------------------
* Preset manager
    - [New]Add menu bar with same functionality as tray icon menu for all platform,
      which substitutes tray icon for none-windows platform.
    - Now handles all underlaying widget & module & APP control. 

* Sectors Widget
    - Properly saves current session fastest top speed from valid lap.

* Customization
    - Added "transparent_color" setting in JSON config file.
      This setting is meant to be used by none-Windows platform
      where transparent background color is not supported,
      and user may customize a substitute color.

* Core
    - Added initial cross platform support (by Bernat).
    - Rewritten & improved code structure to support cross platform.
    - Fixed a widget position reset issue that can occur if auto-hide is enabled
      while launching the APP or reloading a preset.

* Misc
    - Updated contributors.md with new contributor (Bernat).
    - Updated customization guide with new configurable setting.

TinyPedal 1.10.1 (2023-01-14)
-----------------------------
* Core
    - Fixed invalid deltabest & fuel data filename that contains special characters,
      which would cause saving & loading error.
    - Improved calculation for cruise, pedal, pressure, temperature, wheel widgets.

TinyPedal 1.10.0 (2022-12-09)
-----------------------------